        in the expression rather than the name 'q' (bug #974) and,
        multiple items work (bug #975). Thanks to Harish V for
        reporting. 
        
    o   Quoted j expressions receive similar fix, bug #977. Thanks
        to Harish V for reporting.
        
    o   Multiple errors (grammar, format and spelling) in intro.Rnw
        and faqs.Rnw corrected by Dennis Murphy. Thank you.

    


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.4.1   **
        **                                         **
        *********************************************


NEW FEATURES

    o   Vignettes tidied up.
    
        
BUG FIXES

    o   Out of order levels in key columns are now sorted by
        setkey. Thanks to Steve Lianoglou for reporting.

        


        *******************************************
        **                                       **
        **   CHANGES IN DATA.TABLE VERSION 1.4   **
        **                                       **
        *******************************************


NEW FEATURES

    o   'by' faster. Memory is allocated first for the result, then
    populated directly by the result of j for each group. Can be 10
    or more times faster than tapply() and aggregate(), see
    timings vignette.
    
    o   j should now be a list(), not DT(), of expressions. Use of
    j=DT(...) is caught internally and replaced with j=list(...).
    
    o   'by' may be a list() of expressions, and a single column name
    no longer has to be quoted. A comma separated string is ok too,
    as before. 
    
    o   key() and key<- added. More R-style alternatives to getkey()
    and setkey().
    
    o   haskey() added. Returns TRUE if a table has a key.
    
    o   radix sorting is now column by column where possible, was
    previously all or nothing. Helps with keys of many columns.
    
    o   Added format method.
    